# witboost-kgm-business-concepts-picker

./: .gitignore  Dockerfile  README.md  application.yaml  custom-url-picker-openapi.yaml  example-kgm-request.bash  example-kgm-response.yaml  pyproject.toml  server_start.sh
docs/: 01-high-level-design.md  02-low-level-design.md  03-integration-tutorial.md
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: configmap.yaml  deployment.yaml
src/: dependencies.py  main.py  settings.py
src/models/: api_models.py
src/routers/: custom_url_picker_router.py
src/services/: external_service.py  kgm_service.py
tests/: conftest.py  test_health.py  test_kgm_service.py  test_resources.py  test_validate.py
