[tool.poetry]
name = "custom-url-picker"
version = "0.1.0"
description = "Witboost Custom URL Picker - serves drop-down options from an external service"
authors = ["Agile Lab"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["all"], version = ">=0.115.8"}
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
pyyaml = "^6.0"
types-pyyaml = "^6.0"
loguru = "^0.7.3"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.5"
respx = "^0.22.0"

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 120

[tool.pytest.ini_options]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
